welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: not found: value sawBaggle
  if (sawBaggle)
      ^