welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  /* Renvoie true si la colonne contient un baggle */
  if (sawBaggle)
  	return true;
 	else
  	return false;
}